--- a/app/src/main/res/layout/fragment_view_task.xml
+++ b/app/src/main/res/layout/fragment_view_task.xml
@@ -5,6 +5,23 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <TextView
+        android:id="@+id/taskTitle"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <Switch
+            android:id="@+id/taskStatus"
+            android:textOn="@string/done"
+            android:textOff="@string/not_done"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
     <LinearLayout
         android:layout_marginBottom="5dp"
         android:layout_width="match_parent"
@@ -34,23 +51,6 @@
             android:layout_width="0dp"
             android:layout_height="match_parent" />
     </LinearLayout>
-    <LinearLayout
-        android:layout_marginBottom="5dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:text="@string/task"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:layout_weight="1.2"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:id="@+id/taskTitle"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:layout_weight="3"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
     <TextView
         android:text="@string/description"
         android:textAppearance="?android:attr/textAppearanceMedium"
@@ -60,14 +60,18 @@
     <TextView
         android:id="@+id/taskDescription"
         android:textAppearance="?android:attr/textAppearanceMedium"
+        android:maxLines="4"
+        android:scrollbars="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
-    <View
+    <ListView
+        android:id="@+id/subtasksList"
         android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="0dp" />
+        android:layout_height="0dp"/>
     <LinearLayout
         android:orientation="horizontal"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <Button
