--- a/app/src/main/res/layout/fragment_create_subtask.xml
+++ b/app/src/main/res/layout/fragment_create_subtask.xml
@@ -17,8 +17,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginLeft="2dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:layout_weight="1"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
     <LinearLayout
@@ -113,6 +112,7 @@
                 android:layout_height="wrap_content" />
         </LinearLayout>
         <LinearLayout
+            android:gravity="center"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content">
