Added code for triggering and creating action mode in Taskviewfragment

--- a/app/src/main/res/layout/subtask_item.xml
+++ b/app/src/main/res/layout/subtask_item.xml
@@ -2,6 +2,7 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
+    android:background="?android:attr/activatedBackgroundIndicator"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <TextView
@@ -18,6 +19,7 @@
         android:id="@+id/status"
         android:textOff="@string/not_done"
         android:textOn="@string/done"
+        android:focusable="false"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 </LinearLayout>
