--- a/app/src/main/res/layout/fragment_view_subtask.xml
+++ b/app/src/main/res/layout/fragment_view_subtask.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingRight="10dp"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:layout_width="match_parent"
@@ -16,11 +16,12 @@
         <TextView
             android:text="@string/task"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:layout_weight="1.2"
+            android:layout_weight="1.5"
+            android:layout_marginRight="5dp"
             android:layout_width="0dp"
             android:layout_height="wrap_content" />
         <TextView
-            android:id="@+id/tasktitle"
+            android:id="@+id/taskTitle"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:layout_weight="3"
             android:layout_width="0dp"
@@ -33,13 +34,16 @@
         <TextView
             android:text="@string/description"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:layout_weight="1.2"
+            android:layout_weight="1.5"
+            android:layout_marginRight="5dp"
             android:layout_width="0dp"
             android:layout_height="wrap_content" />
         <TextView
             android:id="@+id/taskDescription"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:layout_weight="3"
+            android:maxLines="7"
+            android:scrollbars="vertical"
             android:layout_width="0dp"
             android:layout_height="wrap_content" />
     </LinearLayout>
